# ray-tracer

./: .gitignore  Cargo.toml  README.md  makefile
src/: camera.rs  color.c  color.h  hit_record.c  hit_record.h  lib.rs  main.c  main.rs  material.rs  ray.c  ray.h  ray.rs  scene.rs  shape.rs  sphere.c  sphere.h  texture.rs  vec3.rs  vectors.rs  world.c  world.h
src/material/: dielectric.rs  diffuse_light.rs  lambertian.rs  metal.rs
src/scene/: cube.rs  dark.rs  mesh_test.rs  sky.rs  triangle_test.rs  triple_sphere.rs  weekend.rs
src/shape/: mesh.rs  plane.rs  sphere.rs  triangle.rs
src/texture/: checker.rs  image_texture.rs  solid_color.rs  uv.rs
